# minified

./: CMakeLists.txt  CMakeListsFiles.txt  ConfigOptionsLast.txt
OsslWrapper/: OsslWrapper.sln
OsslWrapper/OsslWrapper/: OsslWrapper.vcxproj  OsslWrapper.vcxproj.filters  main.c  ossl.c  ossl.h
include/openssl/: configuration.h
notes/: EncDec.txt  PassToHex.c
source/apps/: progs.c  progs.h
source/mock/: mocksyms.c  mocksyms.h
